--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,8 +42,7 @@
 	</listener>
 	<listener>
 		<listener-class>
-			org.springframework.web.context.request.RequestContextListener
-		</listener-class>
+			org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
 	<filter>
 		<filter-name>PrimeFaces FileUpload Filter</filter-name>
@@ -75,10 +74,8 @@
 	</context-param>
 	<!-- <context-param> <param-name>primefaces.THEME</param-name> <param-value>bootstrap</param-value> 
 		</context-param> -->
-	<!-- <context-param>
-		<param-name>primefaces.THEME</param-name>
-		<param-value>none</param-value>
-	</context-param> -->
+	<!-- <context-param> <param-name>primefaces.THEME</param-name> <param-value>none</param-value> 
+		</context-param> -->
 	<error-page>
 		<error-code>500</error-code>
 		<location>/login.jsp</location>
@@ -96,7 +93,9 @@
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
 		<param-value>client</param-value>
 	</context-param>
-
+	<session-config>
+		<session-timeout>45</session-timeout>
+	</session-config>
 	<!-- <context-param> <param-name>com.sun.faces.numberOfViewsInSession</param-name> 
 		<param-value>500</param-value> </context-param> <context-param> <param-name>com.sun.faces.numberOfLogicalViews</param-name> 
 		<param-value>500</param-value> </context-param> -->
