--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	version="3.1">
 	<display-name>sistema-escolar</display-name>
 	<welcome-file-list>
-		<welcome-file>login/login.jsp</welcome-file>
+		<welcome-file>/login/login.jsp</welcome-file>
 	</welcome-file-list>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
