--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mz.sistema.gestao.escolar</groupId>
-	<artifactId>sistema-escolar</artifactId>
+	<artifactId>sige.ac.mz</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
 	<packaging>war</packaging>
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springframework.version>5.0.7.RELEASE</springframework.version>
-		<springsecurity.version>5.0.6.RELEASE</springsecurity.version>
+		<springsecurity.version>5.0.0.RELEASE</springsecurity.version>
 		<hibernate.version>5.3.3.Final</hibernate.version>
 		<jboss.version>3.3.1.Final</jboss.version>
 		<jdk.version>1.8</jdk.version>
