--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sistema-escolar</name>
+	<name>sige.ac.mz</name>
 	<comment></comment>
 	<projects>
 	</projects>
